# player-k

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: colors.h  utils.h
src/: colors.h  main.c  renderer.c
src/helper/: utils.zig
